sign up and login with email verification

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.27.2",
-    "primeicons": "^5.0.0",
-    "primereact": "^8.1.1",
+    "bootstrap": "^5.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
